# mytools

./: pyproject.toml  test.py
src/mytools/: moduleA.py
